完善代码生成功能，增加页面和js文件的自动生成功能，同时生成模块菜单权限SQL

--- a/yuntao-manager-core/src/main/resources/templates/generator/Controller.java.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Controller.java.vm
@@ -20,7 +20,7 @@ import pers.chanus.yuntao.server.annotation.SystemLog;
 import pers.chanus.yuntao.springmvc.controller.BaseController;
 
 /**
- * ${tableComment}管理
+ * ${moduleName}
  * 
  * @author ${author}
  * @date ${dateTime}
