--- a/yuntao-manager-core/src/main/resources/templates/generator/Mapper.xml.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Mapper.xml.vm
@@ -74,12 +74,22 @@
   
   <select id="count" parameterType="java.util.Map" resultType="java.lang.Integer">
     select count(*) from ${tableName}
+    <where>
+      <if test="${pk.attributename} != null">
+        and ${pk.columnName} = #{${pk.attributename},jdbcType=${pk.jdbcType}}
+      </if>
+    </where>
   </select>
   
   <select id="list" parameterType="java.util.Map" resultMap="BaseResultMap">
     select 
     <include refid="Base_Column_List" />
     from ${tableName}
+    <where>
+      <if test="${pk.attributename} != null">
+        and ${pk.columnName} = #{${pk.attributename},jdbcType=${pk.jdbcType}}
+      </if>
+    </where>
     <if test="pagination == true">
       limit #{start,jdbcType=INTEGER}, #{limit,jdbcType=INTEGER}
     </if>
