--- a/yuntao-manager-core/src/main/resources/templates/generator/list.jsp.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/list.jsp.vm
@@ -15,6 +15,9 @@
             <div class="layui-input-inline">
               <input type="text" id="${pk.attributename}" class="layui-input" placeholder="请输入${pk.columnComment}" autocomplete="off">
             </div>
+            <div class="layui-input-inline" style="width: 85px;">
+              <button id="search" class="layui-btn"><i class="layui-icon layui-icon-search"></i>搜索</button>
+            </div>
             <div class="layui-input-inline operator-div">
               <c:if test="${ powers['ADD'] }">
                 <button id="add" class="layui-btn layui-btn-normal"><i class="layui-icon layui-icon-add-circle-fine"></i>添加</button>
