系统页面样式调整

--- a/yuntao-manager-core/src/main/resources/templates/generator/add-update.jsp.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/add-update.jsp.vm
@@ -8,13 +8,13 @@
   <body>
     <div class="pd-5">
       <form class="layui-form layui-form-pane">
-        <input type="hidden" name="${pk.attributename}" value="${${classname}.${pk.attributename} }" autocomplete="off" class="layui-input">
+        <input type="hidden" name="${pk.attributename}" value="${${classname}.${pk.attributename} }" class="layui-input" autocomplete="off">
 #foreach ($column in $columns)
 #if($column.columnName != $pk.columnName)
         <div class="layui-form-item">
           <label class="layui-form-label">${column.columnComment}#if($column.nullable == 'NO')<span class="red">*</span>#end</label>
           <div class="layui-input-block">
-            <input type="text" name="${column.attributename}" #if($column.nullable == 'NO')required lay-verify="required"#end value="${${classname}.${column.attributename} }" placeholder="请输入${column.columnComment}" autocomplete="off" class="layui-input">
+            <input type="text" name="${column.attributename}" #if($column.nullable == 'NO')required lay-verify="required"#end value="${${classname}.${column.attributename} }" placeholder="请输入${column.columnComment}" class="layui-input" autocomplete="off">
           </div>
         </div>
 #end
