--- a/yuntao-manager-core/src/main/resources/templates/generator/list.jsp.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/list.jsp.vm
@@ -9,24 +9,26 @@
     <div class="pd-5">
       <!-- 搜索条件 -->
       <div class="layui-form layui-form-pane">
-        <div class="layui-inline">
-          <div class="layui-form-item">
+        <div class="layui-form-item">
+          <div class="layui-inline">
             <label class="layui-form-label">${pk.columnComment}</label>
-            <div class="layui-input-inline">
-              <input type="text" id="${pk.attributename}" class="layui-input" placeholder="请输入${pk.columnComment}" autocomplete="off">
-            </div>
-            <div class="layui-input-inline" style="width: 85px;">
-              <button id="search" class="layui-btn"><i class="layui-icon layui-icon-search"></i>搜索</button>
-            </div>
-            <div class="layui-input-inline operator-div">
-              <c:if test="${ powers['ADD'] }">
-                <button id="add" class="layui-btn layui-btn-normal"><i class="layui-icon layui-icon-add-circle-fine"></i>添加</button>
-              </c:if>
-              <c:if test="${ powers['DELETE'] }">
-                <button id="delete" class="layui-btn layui-btn-danger"><i class="layui-icon layui-icon-delete"></i>删除</button>
-              </c:if>
+            <div class="layui-input-block">
+              <input type="text" id="${pk.attributename}" placeholder="请输入${pk.columnComment}" class="layui-input" autocomplete="off">
             </div>
           </div>
+          <div class="layui-inline">
+            <button id="search" class="layui-btn"><i class="layui-icon layui-icon-search"></i>搜索</button>
+          </div>
+          <c:if test="${ powers['ADD'] }">
+            <div class="layui-inline">
+              <button id="add" class="layui-btn layui-btn-normal"><i class="layui-icon layui-icon-add-circle-fine"></i>添加</button>
+            </div>
+          </c:if>
+          <c:if test="${ powers['DELETE'] }">
+            <div class="layui-inline">
+              <button id="delete" class="layui-btn layui-btn-danger"><i class="layui-icon layui-icon-delete"></i>删除</button>
+            </div>
+          </c:if>
         </div>
       </div>
       <!-- 数据展示 -->
