1.重构iconPicker.js图表选择器，FontAwesome 4.7.0图表选择，可单独选择layui图表和FontAwesome 4.7.0图表，也可以混合选择；

--- a/yuntao-manager-core/src/main/webapp/resources/css/global.css
+++ b/yuntao-manager-core/src/main/webapp/resources/css/global.css
@@ -162,3 +162,10 @@ span[class*="layui-badge"] {
 td .layui-btn + .layui-btn {
     margin-left: 0;
 }
+
+.layui-nav .fa {
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    margin-top: -7px;
+}
