1.重构iconPicker.js图表选择器，FontAwesome 4.7.0图表选择，可单独选择layui图表和FontAwesome 4.7.0图表，也可以混合选择；

--- a/yuntao-manager-core/src/main/webapp/resources/css/global.css
+++ b/yuntao-manager-core/src/main/webapp/resources/css/global.css
@@ -163,6 +163,7 @@ td .layui-btn + .layui-btn {
     margin-left: 0;
 }
 
+/*菜单栏适应FontAwesome图标*/
 .layui-nav .fa {
     position: absolute;
     top: 50%;
