--- a/yuntao-manager-core/src/main/webapp/resources/css/layui-form-sm.css
+++ b/yuntao-manager-core/src/main/webapp/resources/css/layui-form-sm.css
@@ -1,61 +1,71 @@
-.layui-input-sm, .layui-select-sm, .layui-textarea-sm {
-    width: 100px;
-    height: 25px;
-    line-height: 1;
-    border-width: 1px;
-    border-style: solid;
-    background-color: #fff;
-    border-radius: 2px;
-    border-color: #e6e6e6;
-    padding-left: 5px;
-}
+/**
+ 针对layui表单偏大的情况，做一个小号表单
+ @Name: layui-form-sm
+ @Author: Chanus
+ */
 
-.layui-form-item-sm .layui-input-inline-sm {
-    float: left;
-    width: 100px;
-    margin-right: 5px;
-}
+/** 表单 **/
+.sm .layui-input, .sm .layui-textarea, .sm .layui-select{height: 28px; line-height: 28px\9;}
+.sm .layui-input, .sm .layui-textarea{padding-left: 2px; font-size: 12px;}
+.sm .layui-textarea{min-height: 80px; line-height: 18px; padding: 5px;}
 
-.layui-input-inline-sm {
-    display: inline-block;
-    vertical-align: middle;
-    position: relative;
-}
+.sm .layui-form-item{margin-bottom: 2px;}
+.sm .layui-form-label{width: 90px; padding: 3px 5px; height: 28px; font-size: 12px;}
+.sm .layui-form-item .layui-inline{margin-bottom: 2px; margin-right: 0;}
+.sm .layui-input-block{margin-left: 90px; min-height: 28px;}
+.sm .layui-form-item .layui-input-inline{width: 150px; margin-right: 0;}
 
-.layui-form-label-sm {
-    float: left;
-    display: block;
-    padding: 0px 8px;
-    width: 60px;
-    font-weight: 400;
-    /* line-height: 24px; */
-    text-align: right;
-    position: relative;
-}
+/* 分割块 */
+.sm .layui-form-mid{padding: 4px 0 !important; font-size: 12px;}
 
-.layui-card-header-sm {
-    position: relative;
-    /* height: 42px; */
-    line-height: 28px;
-    color: rgb(51, 51, 51);
-    font-size: 14px;
-    padding: 10px 15px;
-    border-bottom: 1px solid rgb(246, 246, 246);
-    border-radius: 2px 2px 0px 0px;
-}
+/* 下拉选择 */
+.sm .layui-form-select dl{top: 28px; padding: 0; font-size: 12px;}
+.sm .layui-form-select dl dt, .sm .layui-form-select dl dd{line-height: 28px;}
+.sm .layui-form-selectup dl{top: auto; bottom: 20px;}
+.sm .layui-select-none{margin: 2px 0;}
 
-.layui-select-title > input {
-    width: 100px;
-    height: 25px;
-    line-height: 1;
-    border-width: 1px;
-    border-style: solid;
-    background-color: #fff;
-    border-radius: 2px;
-    border-color: #e6e6e6;
-    padding-left: 5px;
-}
+/* 复选框 */
+.sm .layui-form-checkbox{position: relative; display: inline-block; vertical-align: middle; height: 24px; line-height: 24px; margin-right: 10px; padding-right: 24px; background-color: #fff; cursor: pointer; font-size: 0;  -webkit-transition: .1s linear; transition: .1s linear; box-sizing: border-box;}
+.sm .layui-form-checkbox:hover{}
+.sm .layui-form-checkbox *{display: inline-block; vertical-align: middle;}
+.sm .layui-form-checkbox span{padding: 0 10px; height: 100%; font-size: 12px; border-radius: 2px 0 0 2px; background-color: #d2d2d2; color: #fff; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
+.sm .layui-form-checkbox:hover span{background-color: #c2c2c2;}
+.sm .layui-form-checkbox i{position: absolute; right: 0; top: 0; width: 24px; height: 22px; border: 1px solid #d2d2d2; border-left: none; border-radius: 0 2px 2px 0; color: #fff; font-size: 20px; text-align: center;}
+.sm .layui-form-checkbox:hover i{border-color: #c2c2c2; color: #c2c2c2;}
+.sm .layui-form-checked, .layui-form-checked:hover{border-color: #5FB878;}
+.sm .layui-form-checked span, .layui-form-checked:hover span{background-color: #5FB878;}
+.sm .layui-form-checked i, .layui-form-checked:hover i{color: #5FB878;}
+.sm .layui-form-item .layui-form-checkbox{margin-top: 2px;}
 
-.layui-pop-search {
-    cursor: pointer
+/* 复选框-原始风格 */
+.sm .layui-form-checkbox[lay-skin="primary"]{height: auto!important; line-height: normal!important; min-width: 18px; min-height: 18px; border: none!important; margin-right: 0; padding-left: 20px; padding-right: 0; background: none;}
+.sm .layui-form-checkbox[lay-skin="primary"] span{padding-left: 0; padding-right: 5px; line-height: 18px; background: none; color: #666; font-size: 12px;}
+.sm .layui-form-checkbox[lay-skin="primary"] i{right: auto; left: 0; width: 14px; height: 14px; line-height: 14px; border: 1px solid #d2d2d2; font-size: 12px; border-radius: 2px; background-color: #fff; -webkit-transition: .1s linear; transition: .1s linear;}
+.sm .layui-form-checkbox[lay-skin="primary"]:hover i{border-color: #5FB878; color: #fff;}
+.sm .layui-form-checked[lay-skin="primary"] i{border-color: #5FB878 !important; background-color: #5FB878; color: #fff;}
+.sm .layui-checkbox-disbaled[lay-skin="primary"] span{background: none!important; color: #c2c2c2;}
+.sm .layui-checkbox-disbaled[lay-skin="primary"]:hover i{border-color: #d2d2d2;}
+.sm .layui-form-item .layui-form-checkbox[lay-skin="primary"]{margin-top: 2px;}
+
+/* 复选框-开关风格 */
+.sm .layui-form-switch{position: relative; display: inline-block; vertical-align: middle; height: 22px; line-height: 22px; min-width: 35px; padding: 0 5px; margin-top: 2px; border: 1px solid #d2d2d2; border-radius: 20px; cursor: pointer; background-color: #fff; -webkit-transition: .1s linear; transition: .1s linear;}
+.sm .layui-form-switch i{position: absolute; left: 5px; top: 3px; width: 16px; height: 16px; border-radius: 20px; background-color: #d2d2d2; -webkit-transition: .1s linear; transition: .1s linear;}
+.sm .layui-form-switch em{position: relative; top: 0; width: 25px; margin-left: 21px; padding: 0!important; text-align: center!important; color: #999!important; font-style: normal!important; font-size: 12px;}
+.sm .layui-form-onswitch{border-color: #5FB878; background-color: #5FB878;}
+.sm .layui-form-onswitch i{left: 100%; margin-left: -21px; background-color: #fff;}
+.sm .layui-form-onswitch em{margin-left: 5px; margin-right: 21px; color: #fff!important;}
+
+/* 单选框 */
+.sm .layui-form-radio{display: inline-block; vertical-align: middle; line-height: 28px; margin: 2px 10px 0 10px; padding-right: 10px; cursor: pointer; font-size: 0;}
+.sm .layui-form-radio *{display: inline-block; vertical-align: middle; font-size: 12px;}
+.sm .layui-form-radio>i{margin-right: 8px; font-size: 18px; color: #c2c2c2;}
+.sm .layui-form-radioed>i,.layui-form-radio>i:hover{color: #5FB878;}
+.sm .layui-radio-disbaled>i{color: #e2e2e2 !important;}
+
+/** 表单响应式 **/
+@media screen and (max-width: 450px) {
+    .sm .layui-form-item .layui-inline{margin-bottom: 2px;}
+    .sm .layui-form-item .layui-input-inline{display: block; float: none; left: -3px; width: auto; margin: 0 0 3px auto; }
+    .sm .layui-form-item .layui-input-inline+.layui-form-mid{margin-left: 90px; top: -5px; padding: 0;}
+    .sm .layui-form-item .layui-form-checkbox{margin-right: 5px; margin-bottom: 2px;}
 }
