--- a/yuntao-manager-core/src/main/webapp/resources/css/global.css
+++ b/yuntao-manager-core/src/main/webapp/resources/css/global.css
@@ -170,3 +170,16 @@ td .layui-btn + .layui-btn {
     left: 20px;
     margin-top: -7px;
 }
+
+/*layui表格编辑列增加编辑标识*/
+.layui-table-body td[data-edit="text"]:after {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    content: "\e642";
+    font-family: layui-icon!important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
