--- a/yuntao-manager-core/src/main/resources/templates/generator/Mapper.xml.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Mapper.xml.vm
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
-<mapper namespace="${package}.mapper.${className}Mapper">
-  <resultMap id="BaseResultMap" type="${package}.model.${className}">
+<mapper namespace="${serverPackage}.mapper.${className}Mapper">
+  <resultMap id="BaseResultMap" type="${serverPackage}.model.${className}">
 #foreach ($column in $columns)
 #if($column.columnKey == 'PRI')
     <id column="${column.columnName}" jdbcType="${column.jdbcType}" property="${column.attributename}" />
@@ -40,7 +40,7 @@
     </where>
   </delete>
   
-  <insert id="insertSelective" parameterType="${package}.model.${className}">
+  <insert id="insertSelective" parameterType="${serverPackage}.model.${className}">
     insert into ${tableName}
     <trim prefix="(" suffix=")" suffixOverrides=",">
 #foreach ($column in $columns)
@@ -58,7 +58,7 @@
     </trim>
   </insert>
   
-  <update id="updateByPrimaryKeySelective" parameterType="${package}.model.${className}">
+  <update id="updateByPrimaryKeySelective" parameterType="${serverPackage}.model.${className}">
     update ${tableName}
     <set>
 #foreach ($column in $columns)
