--- a/yuntao-manager-core/src/main/webapp/resources/css/login.css
+++ b/yuntao-manager-core/src/main/webapp/resources/css/login.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 .beg-login-bg {
     display: flex;
     justify-content: center;
@@ -10,7 +14,6 @@
 
 .beg-login-box {
     width: 400px;
-    margin: 10% auto;
     background-color: #fff;
     border-radius: 6px;
 }
@@ -28,7 +31,6 @@
 }
 
 .beg-login-box .beg-login-main {
-    /*height: 300px;*/
     padding: 30px;
 }
 
