--- a/yuntao-manager-core/src/main/resources/templates/generator/add-update.jsp.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/add-update.jsp.vm
@@ -1,4 +1,4 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
+<%@ page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <%@ include file="${parentPath}public/public.jsp" %>
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
