--- a/yuntao-manager-core/src/main/resources/templates/generator/Mapper.java.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Mapper.java.vm
@@ -1,7 +1,7 @@
 package ${serverPackage}.mapper;
 
 import ${serverPackage}.model.${className};
-import pers.chanus.yuntao.server.mapper.BaseMapper;
+import pers.chanus.yuntao.server.mapper.SuperMapper;
 
 /**
  * ${tableComment}
@@ -10,6 +10,6 @@ import pers.chanus.yuntao.server.mapper.BaseMapper;
  * @date ${dateTime}
  * @since ${since}
  */
-public interface ${className}Mapper extends BaseMapper<${className}, ${pk.attributeType}> {
+public interface ${className}Mapper extends SuperMapper<${className}, ${pk.attributeType}> {
 
 }
