系统集成 Mybatis Plus 框架

--- a/yuntao-manager-core/src/main/resources/templates/generator/Mapper.java.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Mapper.java.vm
@@ -10,6 +10,6 @@ import pers.chanus.yuntao.server.mapper.SuperMapper;
  * @date ${dateTime}
  * @since ${since}
  */
-public interface ${className}Mapper extends SuperMapper<${className}, ${pk.attributeType}> {
+public interface ${className}Mapper extends SuperMapper<${className}> {
 
 }
