--- a/yuntao-manager-core/src/main/resources/templates/generator/Service.java.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Service.java.vm
@@ -10,6 +10,6 @@ import pers.chanus.yuntao.server.service.BaseService;
  * @date ${dateTime}
  * @since ${since}
  */
-public interface ${className}Service extends BaseService<${className}, ${pk.attributeType}> {
+public interface ${className}Service extends BaseService<${className}> {
 
 }
