--- a/yuntao-manager-core/src/main/resources/templates/generator/ServiceImpl.java.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/ServiceImpl.java.vm
@@ -1,8 +1,6 @@
 package ${serverPackage}.service.impl;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import ${serverPackage}.mapper.${className}Mapper;
 import ${serverPackage}.model.${className};
 import ${serverPackage}.service.${className}Service;
@@ -16,11 +14,6 @@ import pers.chanus.yuntao.server.service.impl.BaseServiceImpl;
  * @since ${since}
  */
 @Service
-public class ${className}ServiceImpl extends BaseServiceImpl<${className}Mapper, ${className}, ${pk.attributeType}> implements ${className}Service {
-
-    @Autowired
-    public void setMapper(${className}Mapper mapper) {
-        this.mapper = mapper;
-    }
+public class ${className}ServiceImpl extends BaseServiceImpl<${className}Mapper, ${className}> implements ${className}Service {
 
 }
