--- a/yuntao-manager-core/src/main/resources/templates/generator/Mapper.xml.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Mapper.xml.vm
@@ -10,7 +10,7 @@
     </where>
   </select>
   
-  <select id="list" parameterType="java.util.Map" resultMap="BaseResultMap">
+  <select id="list" parameterType="java.util.Map" resultType="${serverPackage}.model.${className}">
     select
     #foreach($column in $columns)$column.columnName#if($velocityCount != $columns.size()), #end#end
 
