删除 yuntao-server 模块，将 yuntao-server 模块中的内容合并到 yuntao-spring-mvc 模块中

--- a/yuntao-manager-core/src/main/resources/templates/generator/Controller.java.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Controller.java.vm
@@ -16,7 +16,7 @@ import pers.chanus.yuntao.commons.pojo.PageBean;
 import pers.chanus.yuntao.manager.common.ModulePowerUtils;
 import ${serverPackage}.model.${className};
 import ${serverPackage}.service.${className}Service;
-import pers.chanus.yuntao.server.annotation.SystemLog;
+import pers.chanus.yuntao.springmvc.annotation.SystemLog;
 import pers.chanus.yuntao.springmvc.controller.BaseController;
 
 /**
