--- a/yuntao-manager-core/src/main/resources/templates/generator/Mapper.java.vm
+++ b/yuntao-manager-core/src/main/resources/templates/generator/Mapper.java.vm
@@ -1,7 +1,7 @@
 package ${serverPackage}.mapper;
 
 import ${serverPackage}.model.${className};
-import pers.chanus.yuntao.server.mapper.SuperMapper;
+import pers.chanus.yuntao.springmvc.mapper.SuperMapper;
 
 /**
  * ${tableComment}
