1. 第三方依赖升级；
2. 模块管理功能优化操作；

3. 代码自动生成优化操作；

4. CustomMap.java 删除，替换为 yuntao-utils 工具包中的 CustomMap.java

--- a/yuntao-manager/yuntao-manager-web/src/main/resources/templates/generator/Mapper.java.vm
+++ b/yuntao-manager/yuntao-manager-web/src/main/resources/templates/generator/Mapper.java.vm
@@ -11,5 +11,8 @@ import pers.chanus.yuntao.springmvc.mapper.SuperMapper;
  * @since ${since}
  */
 public interface ${className}Mapper extends SuperMapper<${className}> {
-
+#if($overrideUpdate == '1')
+    @Override
+    int updateById(${className} ${classname});
+#end
 }
