--- a/yuntao-manager/yuntao-manager-web/src/main/resources/templates/generator/Controller.java.vm
+++ b/yuntao-manager/yuntao-manager-web/src/main/resources/templates/generator/Controller.java.vm
@@ -2,6 +2,8 @@ package ${controllerPackage}.controller;
 
 import java.util.Arrays;
 
+import com.chanus.yuntao.utils.core.lang.Message;
+import com.chanus.yuntao.utils.core.lang.Page;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -10,14 +12,12 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
 
-import pers.chanus.yuntao.commons.constant.LogTypeEnum;
-import pers.chanus.yuntao.commons.pojo.Message;
-import pers.chanus.yuntao.commons.pojo.PageBean;
 import pers.chanus.yuntao.manager.common.ModulePowerUtils;
 import ${serverPackage}.model.${className};
 import ${serverPackage}.service.${className}Service;
 import pers.chanus.yuntao.springmvc.annotation.SystemLog;
 import pers.chanus.yuntao.springmvc.controller.BaseController;
+import pers.chanus.yuntao.springmvc.enums.LogTypeEnum;
 
 /**
  * ${moduleName}
@@ -55,7 +55,7 @@ public class ${className}Controller extends BaseController {
      */
     @ResponseBody
     @PostMapping(value = "list.do", produces = "application/json; charset=utf-8")
-    public PageBean list() {
+    public Page<${className}> list() {
         return ${classname}Service.listPagination(getParams());
     }
 
