--- a/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/resources/templates/generator/Controller.java.vm
+++ b/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/resources/templates/generator/Controller.java.vm
@@ -43,7 +43,7 @@ public class ${className}Controller extends BaseController {
      */
     @GetMapping(value = "main.do")
     public String main(Model model) {
-        model.addAttribute("powers", ModulePowerUtils.getPowers(getSession(), currentModuleCode));
+        model.addAttribute("powers", ModulePowerUtils.getPowers(currentModuleCode));
         return "${pathName}/list";
     }
 
