--- a/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/resources/templates/generator/list.js.vm
+++ b/yuntao-mvc-manager/yuntao-mvc-manager-web/src/main/resources/templates/generator/list.js.vm
@@ -60,5 +60,5 @@ layui.config({
     });
 
     // 增删改
-    operations.config({path: action_path});
+    operations.config({path: action_path#if($pk.attributename != 'id'), id: '${pk.attributename}'#end});
 });
